<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:compat="http://schemas.android.com/apk/res-auto"
      >
      <item android:id="@+id/accept_add"
            android:title="@string/accept"
            android:icon="@drawable/ic_accept"
            compat:showAsAction="always"  />
      <item android:id="@+id/mLock"
            android:title="@string/lock"
            android:icon="@drawable/ic_https_white_18dp"
            compat:showAsAction="ifRoom"  />
      <item android:id="@+id/exit"
            android:title="@string/exit"
            android:icon="@drawable/ic_exit"
            compat:showAsAction="ifRoom"  />
      <item android:id="@+id/settings"
            android:title="@string/options"
            android:icon="@drawable/ic_settings"
            compat:showAsAction="ifRoom"  />
</menu>
